виправлення розмітки та оформлення

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button class="search-btn" type="submit">Search</button>
+      <button class="search-btn" type="submit">
+        <svg width="15" height="15">
+          <use href="./icons.svg#search"></use>
+        </svg>
+      </button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
